# py-api-catalog

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
catalog_api/helpers/: CkanPortalWrapper.py  CsvZipReader.py  CvmZipSchema.py  SchemaHelper.py
catalog_api/infrastructure/: Ckan.py  CkanApi.py  CvmDataPortal.py  DuckDbParquet.py  MongoDatabase.py  S3Bucket.py  SupabaseDb.py
catalog_api/models/: CatalogModels.py
catalog_api/repository/: BaseRepository.py  CatalogRepo.py  ColumnRepository.py  DatasetExtraRepository.py  DatasetRepository.py  DatasetTagRepository.py  GroupExtraRepository.py  GroupRepository.py  LicenseRepository.py  MemberRepository.py  RelationshipRepository.py  ResourceRepository.py  TableRepository.py  TagRepository.py  VocabularyRepository.py
catalog_api/routes/: datasets.py  tables.py
catalog_api/services/: AddCkanDataService.py  CatalogDataService.py  CatalogGroupService.py  CatalogService.py  CkanService.py  ColumnService.py  DataTableService.py  DatasetExtraService.py  DatasetService.py  DatasetTagService.py  GroupExtraService.py  GroupService.py  LicenseService.py  MemberService.py  OrganizationService.py  RelationshipService.py  ResourceService.py  TableService.py  TagService.py  VocabularyService.py
catalog_api/tasks/ckan/: CkanRegisterGroup.py  CkanRegisterLicense.py  CkanRegisterPackage.py  CkanRegisterPortal.py  CkanRegisterResource.py  CkanSynchronizePortal.py
catalog_api/utils/: DataQuery.py  parsers.py
notebooks/: CvmFundsDaily.ipynb
notebooks/br_gov_cvm/fi-doc-inf_diario/: CvmFundsDaily.ipynb
notebooks/br_gov_cvm/fi-doc-inf_diario/dummy_export/: load.sql  schema.sql
services/: DataPortal.py
