[project]
name = "rportela-api-catalog"
version = "0.1.0"
description = "The portela API for data catalog"
authors = [
    {name = "Rodrigo Portela",email = "rodrigo.portela@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb (>=1.0.7,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
