[project]
name = "rportela-api-catalog"
version = "0.1.0"
description = "A modern API catalog system for managing and discovering datasets"
authors = [
    {name = "Rodrigo Portela", email = "rodrigo.portela@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "pydantic>=2.5.2",
    "chromadb>=1.0.7,<2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy-utils>=0.39.3",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "httpx>=0.25.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.11.1",
    "pytest-httpx>=0.21.2",
    "coverage>=7.3.2",
    "pre-commit>=3.5.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_"]
cov_path = "src"
cov_source = ["src"]
addopts = "--cov=src --cov-report=term --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = ''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
combine_as_imports = true
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
python_version = 3.12
strict = true
ignore_missing_imports = true
exclude = ['migrations']

[tool.coverage.run]
source = ["src"]
omit = [
    "src/**/tests/*",
    "src/**/__init__.py"
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"